--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
 <fieldset>     
   
          <legend align="center"><h2> VIMAL KUMAR BHARDWAJ </h2></legend>
-           <img src="/ui/me.jpg" alt="It's me"/>
+           <img src="imad-2016-app/ui/me.jpg" alt="It's me"/>
          
  
           <h3>18 Hari Enclave Chandpur Road Bulandshahr  </h3>
