[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
   
      <fieldset>     
              <legend align="center"><h2> VIMAL KUMAR BHARDWAJ </h2></legend>
-             <img src="imad-2016-app/ui/me.jpg" alt="It's me"/>
+             <img src="/ui/me.jpg" alt="It's me"/>
                    <h3>18 Hari Enclave Chandpur Road Bulandshahr  </h3>
                 <ul>
                     <li> Phno:9629766xxx </li>
@@ -84,10 +84,10 @@
       <h2><b>SKILL SET</b></h2>
   <hr>
           <ul>       
-          <li>Programming Languages – ANSI C, C++, SQL Plus.</li>
-          <li>Web Technology –  HTML , CSS , JavaScript(Basic) , PHP and Bootstrap(Basic)</li>
-          <li>Database – SQL Plus Server.</li>
-          <li>Platforms – Windows</li> 
+          <li>Programming Languages - ANSI C, C++, SQL Plus.</li>
+          <li>Web Technology -  HTML , CSS , JavaScript(Basic) , PHP and Bootstrap(Basic)</li>
+          <li>Database - SQL Plus Server.</li>
+          <li>Platforms - Windows</li> 
 
           </ul>
 
